@@ -1,3 +1,8 @@
+2006-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* sasl.tcl:   Support OTP mechanism (depends upon the otp module).
+	              client only, awaiting tests.
+
 2006-04-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* all:        Incremented version to 1.2.0
